--- a/novo.html
+++ b/novo.html
@@ -1,17 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-
-
-    <h1>Alguma coisa</h1>
-    <p>Duda</p>
-    <p>A Draegnerys é a braba dos dragão</p>
-    
+    <p>Olá sou a Rairai</p>
 </body>
 </html>
-
